--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Museu Interactivo do Megalitismo</title>
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/styles-976eca85e1.css"/>
+    <link rel="stylesheet" href="assets/styles/styles-ae0620a9fe.css"/>
     <script src="assets/scripts/Vendor-025e9571d0.js"></script>
 </head>
 <body>
@@ -301,6 +301,194 @@
         </div>
     </section>
 
+    <section class="precario">
+        <div class="wrapper">
+            <h1 class="heading-primary" data-section-title="PREÇÁRIO">PREÇÁRIO</h1>
+
+            <!-- VISITA LIVRE -->
+            <table class="precario__table u-margin-bottom-sm">
+                <caption class="precario__table-caption">VISITA LIVRE</caption>
+                <thead>
+                    <tr class="precario__table-header-row">
+                        <td class="precario__table-cell precario__table-cell--column-title">&nbsp;</td>
+                        <td class="precario__table-cell precario__table-cell--column-title">NORMAL</td>
+                        <td class="precario__table-cell precario__table-cell--column-title">GRUPOS*</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="precario__table-row">
+                        <td class="precario__table-cell">PORTADOR DE DEFICIÊNCIA</td>
+                        <td class="precario__table-cell">-50%</td>
+                        <td class="precario__table-cell">&nbsp;</td>
+                    </tr>
+                    <tr class="precario__table-row">
+                        <td class="precario__table-cell">CRIANÇA <span class="extraInfo-small">(0 - 2 anos)</span></td>
+                        <td class="precario__table-cell">GRÁTIS</td>
+                        <td class="precario__table-cell">&nbsp;</td>
+                    </tr>
+                    <tr class="precario__table-row">
+                        <td class="precario__table-cell">JOVEM <span class="extraInfo-small">(3 - 12 anos)</span></td>
+                        <td class="precario__table-cell">2.50€</td>
+                        <td class="precario__table-cell">2.00€</td>
+                    </tr>
+                    <tr class="precario__table-row">
+                        <td class="precario__table-cell">ADULTO <span class="extraInfo-small">(13 - 64 anos)</span></td>
+                        <td class="precario__table-cell">5.00€</td>
+                        <td class="precario__table-cell">4.50€</td>
+                    </tr>
+                    <tr class="precario__table-row">
+                        <td class="precario__table-cell">SÉNIOR <span class="extraInfo-small">(65+ anos)</span></td>
+                        <td class="precario__table-cell">3.50€</td>
+                        <td class="precario__table-cell">3.00€</td>
+                    </tr>
+                    <tr class="precario__table-row">
+                        <td class="precario__table-cell">FAMÍLIA **</td>
+                        <td class="precario__table-cell">-0.50€<br><small class="extraInfo-small">p/Cada</small></td>
+                        <td class="precario__table-cell">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td class="precario__table-extraInfo">
+                            * mais de 20 pessoas<br>
+                            ** Pais e filhos dos 3 aos 12 anos
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <!-- VISITA GUIADA -->
+            <table class="precario__table">
+                    <caption class="precario__table-caption u-remove-top-offset">VISITA GUIADA</caption>
+                    <thead>
+                        <tr class="precario__table-header-row">
+                            <td class="precario__table-cell">&nbsp;</td>
+                            <td class="precario__table-cell u-border-bottom-lb" colspan="2">GRUPOS</td>
+                        </tr>
+                        <tr class="precario__table-header-row">
+                            <td class="precario__table-cell precario__table-cell--column-title">&nbsp;</td>
+                            <td class="precario__table-cell precario__table-cell--column-title">- 20 Pessoas</td>
+                            <td class="precario__table-cell precario__table-cell--column-title">+ 20 Pessoas</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="precario__table-row">
+                            <td class="precario__table-cell">JOVEM <span class="extraInfo-small">(3 - 12 anos)</span></td>
+                            <td class="precario__table-cell">2.50€</td>
+                            <td class="precario__table-cell">2.00€</td>
+                        </tr>
+                        <tr class="precario__table-row">
+                            <td class="precario__table-cell">ADULTO <span class="extraInfo-small">(13 - 64 anos)</span></td>
+                            <td class="precario__table-cell">5.00€</td>
+                            <td class="precario__table-cell">4.50€</td>
+                        </tr>
+                        <tr class="precario__table-row">
+                            <td class="precario__table-cell">SÉNIOR <span class="extraInfo-small">(65+ anos)</span></td>
+                            <td class="precario__table-cell">3.50€</td>
+                            <td class="precario__table-cell">3.00€</td>
+                        </tr>
+                        <tr class="precario__table-row u-bgcolor-dark-brown">
+                            <td class="precario__table-cell">GUIA</td>
+                            <td class="precario__table-cell">+ 20€<br><small class="extraInfo-small">p/Grupo</small></td>
+                            <td class="precario__table-cell">+ 1€<br><small class="extraInfo-small">p/Pessoa</small></td>
+                        </tr>
+                    </tbody>
+                </table>
+        </div>
+    </section>
+
+    <section class="precario__conjunto">
+        <div class="wrapper">
+            <h2 class="heading-secondary">BILHETE CONJUNTO</h2>
+            <h3 class="sub-heading u-margin-bottom-sm">MUSEU DO MEGALITISMLO + FLUVIÁRIO DE MORA</h3>
+
+            <!-- BILHETE CONJUNTO - VISITA LIVRE -->
+            <table class="precario__table u-margin-bottom-sm">
+                <caption class="precario__table-caption">VISITA LIVRE</caption>
+                <thead>
+                    <tr class="precario__table-header-row">
+                        <td class="precario__table-cell precario__table-cell--column-title">&nbsp;</td>
+                        <td class="precario__table-cell precario__table-cell--column-title">NORMAL</td>
+                        <td class="precario__table-cell precario__table-cell--column-title">GRUPOS*</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="precario__table-row">
+                        <td class="precario__table-cell">PORTADOR DE DEFICIÊNCIA</td>
+                        <td class="precario__table-cell">-50%</td>
+                        <td class="precario__table-cell">&nbsp;</td>
+                    </tr>
+                    <tr class="precario__table-row u-bgcolor-white">
+                        <td class="precario__table-cell">CRIANÇA <span class="extraInfo-small">(0 - 2 anos)</span></td>
+                        <td class="precario__table-cell">GRÁTIS</td>
+                        <td class="precario__table-cell">&nbsp;</td>
+                    </tr>
+                    <tr class="precario__table-row">
+                        <td class="precario__table-cell">JOVEM <span class="extraInfo-small">(3 - 12 anos)</span></td>
+                        <td class="precario__table-cell">7.00€</td>
+                        <td class="precario__table-cell">6.00€</td>
+                    </tr>
+                    <tr class="precario__table-row u-bgcolor-white">
+                        <td class="precario__table-cell">ADULTO <span class="extraInfo-small">(13 - 64 anos)</span></td>
+                        <td class="precario__table-cell">10.00€</td>
+                        <td class="precario__table-cell">9.50€</td>
+                    </tr>
+                    <tr class="precario__table-row">
+                        <td class="precario__table-cell">SÉNIOR <span class="extraInfo-small">(65+ anos)</span></td>
+                        <td class="precario__table-cell">8.00€</td>
+                        <td class="precario__table-cell">7.50€</td>
+                    </tr>
+                    <tr class="precario__table-row u-bgcolor-white">
+                        <td class="precario__table-cell">FAMÍLIA **</td>
+                        <td class="precario__table-cell">-0.50€<br><small class="extraInfo-small">p/Cada</small></td>
+                        <td class="precario__table-cell">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td class="precario__table-extraInfo">
+                            * mais de 20 pessoas<br>
+                            ** Pais e filhos dos 3 aos 12 anos
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <!-- BILHETE CONJUNTO - VISITA GUIADA -->
+            <table class="precario__table u-margin-bottom-s">
+                <caption class="precario__table-caption u-remove-top-offset">VISITA GUIADA</caption>
+                <thead>
+                    <tr class="precario__table-header-row">
+                        <td class="precario__table-cell">&nbsp;</td>
+                        <td class="precario__table-cell u-border-bottom-lb" colspan="2">GRUPOS</td>
+                    </tr>
+                    <tr class="precario__table-header-row">
+                        <td class="precario__table-cell precario__table-cell--column-title">&nbsp;</td>
+                        <td class="precario__table-cell precario__table-cell--column-title">- 20 Pessoas</td>
+                        <td class="precario__table-cell precario__table-cell--column-title">+ 20 Pessoas</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="precario__table-row">
+                        <td class="precario__table-cell">JOVEM <span class="extraInfo-small">(3 - 12 anos)</span></td>
+                        <td class="precario__table-cell">7.00€</td>
+                        <td class="precario__table-cell">6.00€</td>
+                    </tr>
+                    <tr class="precario__table-row u-bgcolor-white">
+                        <td class="precario__table-cell">ADULTO <span class="extraInfo-small">(13 - 64 anos)</span></td>
+                        <td class="precario__table-cell">10.00€</td>
+                        <td class="precario__table-cell">9.50€</td>
+                    </tr>
+                    <tr class="precario__table-row">
+                        <td class="precario__table-cell">SÉNIOR <span class="extraInfo-small">(65+ anos)</span></td>
+                        <td class="precario__table-cell">8.00€</td>
+                        <td class="precario__table-cell">7.50€</td>
+                    </tr>
+                    <tr class="precario__table-row u-bgcolor-dark-brown">
+                        <td class="precario__table-cell">GUIA</td>
+                        <td class="precario__table-cell">+ 50€<br><small class="extraInfo-small">p/Grupo</small></td>
+                        <td class="precario__table-cell">+ 3€<br><small class="extraInfo-small">p/Pessoa</small></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
 
     <div class="swiper-container galeria-swiper">
         <div class="swiper-wrapper">
@@ -344,6 +532,36 @@
         <img src="assets/images/icons/finger-swipe.svg" class="galeria__finger-swipe" alt="">
     </div>
 
+    <section class="contactos">
+        <div class="contactos__mapa"></div>
+        <div class="wrapper">
+            <h1 class="heading-primary" data-section-title="CONTACTE-NOS">CONTACTE-NOS</h1>
+            <form action="" method="POST">
+                <div class="contactos__form">
+                    <input class="contactos__nome" type="text" name="nome" placeholder="Nome">
+                    <input class="contactos__email" type="email" name="email" placeholder="Email">
+                    <textarea class="contactos__message" name="message" id="message" cols="30" rows="10" placeholder="Mensagem"></textarea>
+                    <input class="btn btn-secondary contactos__submit" type="submit" value="ENVIAR MESSAGEM" name="submit">
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer__wrapper">
+                <img class="footer__logo u-margin-bottom-s" src="assets/images/logo-alto.svg" alt="Logotipo do Museu Interactivo do Megalitismo">
+                <a class="footer__text" href="">geralmegalitismo@cm-mora.pt</a>
+                <p class="footer__text u-margin-bottom-s">266 439 074</p>
+                <div class="footer__social u-margin-bottom-s">
+                    <img class="footer__social--facebook" src="assets/images/icons/social-facebook-white.svg" alt="Facebook">
+                </div>
+                <p class="footer__text p-bold">VISITE TAMBÉM</p>
+                <img class="footer__fluviario" src="assets/images//fluviario_logotipo.jpg" alt="Logotipo Fluviário de Mora">
+            </div>
+        </div>
+    </footer>
+
     <div class="modal">
         <div class="modal__wrapper">
             <span class="modal-close icon icon--close u-p-top-right-s">&nbsp;</span>
@@ -351,7 +569,10 @@
         </div>
     </div>
 
-
-    <script src="assets/scripts/App-7cfb854702.js"></script>
+    
+    <script defer async
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4sciudjQxavw9NnmO7iHR-HFJ3QK1cIw">
+    </script>
+    <script src="assets/scripts/App-95d034cf71.js"></script>
 </body>
 </html>
