--- a/app/data/postais/menirTera.html
+++ b/app/data/postais/menirTera.html
@@ -1,7 +1,10 @@
+<figure class="postais__figure u-margin-bottom-s">
+    <img class="postais__figure-image" src="assets/images/megalitismoSlider/menir-de-tera_768w.jpg" alt="Menir de Têra">
+</figure>
 <h3 class="heading-postais">Menir de Têra</h3>
 <p class="paragraph">A Anta-Capela de São Dinis é um caso único de um dólmen situado em pleno contexto urbano, foi erguida entre o IV milénio a.C. e o III milénio a.C., precisamente no centro da vila de Pavia. Trata-se de um grande dólmen de corredor, do qual resta apenas a câmara megalítica, adaptada a templo católico durante a Idade Média, dedicada a São Dinis. Foi intervencionada em 1914 por Vergílio Correia e, em 2014 por Leonor Rocha, por sua vez, com o intuito de verificar a existência de restos de corredor, o que se veio a confirmar. O monumento tem aproximadamente quatro metros de diâmetro e três de altura. A sua adaptação ao culto católico inclui um altar de azulejos de estilo setecentista e barroco. É uma das maiores da Península Ibérica, considerada também como a mais significativa Anta-Capela de Portugal.</p>
 <p class="paragraph"><small><span class="paragraph__strong">Fonte:</span> 'O Tempo das Pedras: Carta Arqueológica de Mora' de Manuel Calado, Leonor Rocha e Pedro Alvim | Património Cultural (www.patrimoniocultural.pt)</small></p>
-<p class="paragraph u-margin-bottom-s"><span class="paragraph__strong">Freguesia:</span> Pavia</p>
+<p class="paragraph u-margin-bottom-xs"><span class="paragraph__strong">Freguesia:</span> Pavia</p>
 <p class="paragraph"><span class="paragraph__strong">Acessibilidade:</span> Fácil</p> 
 <div class="btn-box">
     <a href="https://goo.gl/maps/J4VVqDv4dF92" class="btn btn-modal-postais">VER LOCALIZAÇÃO</a>
