--- a/dev/index.html
+++ b/dev/index.html
@@ -232,6 +232,7 @@
                 </div>
             </div>
         </div>
+        <img src="assets/images/icons/finger-swipe.svg" class="galeria__finger-swipe" alt="">
     </div>
 
     <section class="educacao" id="educacao">
@@ -241,10 +242,10 @@
             <nav class="escolas-navigation__nav">
                 <ul class="escolas-navigation__list">
                     <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link" data-escolamenuitem="preEscolar">Pré-Escolar<br><span class="escolas-navigation__link--small">(3 aos 5 anos)</span></a></li>
-                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link">1º CEB<br><span class="escolas-navigation__link--small">(6 aos 10 anos)</span></a></li>
-                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link">2º CEB<br><span class="escolas-navigation__link--small">(10 aos 12 anos)</span></a></li>
-                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link">3º CEB<br><span class="escolas-navigation__link--small">(12 aos 15 anos)</span></a></li>
-                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link">Ensino Secundário</a></li>
+                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link" data-escolamenuitem="ceb1">1º CEB<br><span class="escolas-navigation__link--small">(6 aos 10 anos)</span></a></li>
+                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link" data-escolamenuitem="ceb2">2º CEB<br><span class="escolas-navigation__link--small">(10 aos 12 anos)</span></a></li>
+                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link" data-escolamenuitem="ceb3">3º CEB<br><span class="escolas-navigation__link--small">(12 aos 15 anos)</span></a></li>
+                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link" data-escolamenuitem="secundario">Ensino Secundário</a></li>
                 </ul>
             </nav>
         </div>
@@ -273,9 +274,7 @@
 
                 <div class="btn-box">
                     <a href="#" class="btn btn-secondary">DESCARREGAR PROJECTO PEDAGÓGICO <span class="icon icon--pdf u-margin-left-xs"></span></a>
-                </div>
-
-                
+                </div>   
             </div>
         </div>
     </section>
@@ -572,8 +571,11 @@
 
     <div class="modal">
         <div class="modal__wrapper">
-            <span class="modal-close icon icon--close u-p-top-right-s">&nbsp;</span>
+            <div class="modal__header">
+                <span class="modal-close icon icon--close u-p-top-right-s">&nbsp;</span>
+            </div>
             <div class="modal__content"></div>
+            <div class="modal__footer"></div>
         </div>
     </div>
 
