--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Museu Interactivo do Megalitismo</title>
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/styles-fd9d928cdc.css"/>
+    <link rel="stylesheet" href="assets/styles/styles-ac59770ff7.css"/>
     <script src="assets/scripts/Vendor-025e9571d0.js"></script>
 </head>
 <body>
@@ -228,6 +228,7 @@
                 </div>
             </div>
         </div>
+        <img src="assets/images/icons/finger-swipe.svg" class="galeria__finger-swipe" alt="">
     </div>
 
     <section class="educacao" id="educacao">
@@ -236,11 +237,11 @@
             <span class="escolas-navigation__close-icon icon icon--close u-p-top-right">&nbsp;</span>
             <nav class="escolas-navigation__nav">
                 <ul class="escolas-navigation__list">
-                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link">Pré-Escolar<br><span class="escolas-navigation__link--small">(3 aos 5 anos)</span></a></li>
-                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link">1º CEB<br><span class="escolas-navigation__link--small">(6 aos 10 anos)</span></a></li>
-                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link">2º CEB<br><span class="escolas-navigation__link--small">(10 aos 12 anos)</span></a></li>
-                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link">3º CEB<br><span class="escolas-navigation__link--small">(12 aos 15 anos)</span></a></li>
-                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link">Ensino Secundário</a></li>
+                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link" data-escolamenuitem="preEscolar">Pré-Escolar<br><span class="escolas-navigation__link--small">(3 aos 5 anos)</span></a></li>
+                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link" data-escolamenuitem="ceb1">1º CEB<br><span class="escolas-navigation__link--small">(6 aos 10 anos)</span></a></li>
+                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link" data-escolamenuitem="ceb2">2º CEB<br><span class="escolas-navigation__link--small">(10 aos 12 anos)</span></a></li>
+                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link" data-escolamenuitem="ceb3">3º CEB<br><span class="escolas-navigation__link--small">(12 aos 15 anos)</span></a></li>
+                    <li class="escolas-navigation__item"><a href="" class="escolas-navigation__link" data-escolamenuitem="secundario">Ensino Secundário</a></li>
                 </ul>
             </nav>
         </div>
@@ -255,19 +256,21 @@
                 </ul>
             </nav>
             
-            <div class="educacao__projecto-pedagogico">
-                <p class="educacao__pp-header">Projecto Pedagógico</p>
-                <p class="educacao__pp-titulo">Pedra a pedra, um conto narrado nunca antes imaginado</p>
-            </div>
+            <div class="educacao__content">
+                <div class="educacao__projecto-pedagogico">
+                    <p class="educacao__pp-header">Projecto Pedagógico</p>
+                    <p class="educacao__pp-titulo">Pedra a pedra, um conto narrado nunca antes imaginado</p>
+                </div>
 
-            <p class="paragraph">O Museu Interactivo do Megalitismo de Mora abriu as suas portas ao público no dia 15 de Setembro de 2016.</p>
-            <p class="paragraph">Com o propósito de garantir uma evolução sustentada ao longo do tempo, elegemos como prioridade, logo desde o início, o desenvolvimento do Projecto Educativo, que, numa perspectiva de complementaridade, abordasse, nomeadamente, o programa escolar da disciplina de História e Geografia dos 5º e 7º anos na parte que respeita à Pré-História. Pretendemos, deste modo, facultar aos professores ferramentas que, de forma prática, possam complementar a matéria leccionada.</p>
-            <p class="paragraph">Neste sentido, recriámos algumas actividades do quotidiano pré-histórico, que poderão, por exemplo, ensinar a talhar, a produzir cerâmicas ou a caçar. Com o objectivo de abranger outros públicos-alvo, desenvolvemos ainda actividades para crianças do pré-escolar e do primeiro ciclo, bem como para os alunos do secundário.</p>
-            <p class="paragraph">No que concerne os visitantes mais novos, procuramos incentivar a criatividade. Aos adolescentes, propomos-lhes algumas actividades que, directa ou indirectamente, estão ligadas às profissões relacionadas com a Arqueologia.</p>
-            <p class="paragraph">De um modo geral, a todas as faixas etárias, apresentamos, através de actividades ao ar livre, de oficinas, de colóquios e palestras, a riqueza e diversidade do valioso Património Cultural existente no Concelho de Mora.</p>
+                <p class="paragraph">O Museu Interactivo do Megalitismo de Mora abriu as suas portas ao público no dia 15 de Setembro de 2016.</p>
+                <p class="paragraph">Com o propósito de garantir uma evolução sustentada ao longo do tempo, elegemos como prioridade, logo desde o início, o desenvolvimento do Projecto Educativo, que, numa perspectiva de complementaridade, abordasse, nomeadamente, o programa escolar da disciplina de História e Geografia dos 5º e 7º anos na parte que respeita à Pré-História. Pretendemos, deste modo, facultar aos professores ferramentas que, de forma prática, possam complementar a matéria leccionada.</p>
+                <p class="paragraph">Neste sentido, recriámos algumas actividades do quotidiano pré-histórico, que poderão, por exemplo, ensinar a talhar, a produzir cerâmicas ou a caçar. Com o objectivo de abranger outros públicos-alvo, desenvolvemos ainda actividades para crianças do pré-escolar e do primeiro ciclo, bem como para os alunos do secundário.</p>
+                <p class="paragraph">No que concerne os visitantes mais novos, procuramos incentivar a criatividade. Aos adolescentes, propomos-lhes algumas actividades que, directa ou indirectamente, estão ligadas às profissões relacionadas com a Arqueologia.</p>
+                <p class="paragraph">De um modo geral, a todas as faixas etárias, apresentamos, através de actividades ao ar livre, de oficinas, de colóquios e palestras, a riqueza e diversidade do valioso Património Cultural existente no Concelho de Mora.</p>
 
-            <div class="btn-box">
-                <a href="#" class="btn btn-secondary">DESCARREGAR PROJECTO PEDAGÓGICO <span class="icon icon--pdf u-margin-left-xs"></span></a>
+                <div class="btn-box">
+                    <a href="#" class="btn btn-secondary">DESCARREGAR PROJECTO PEDAGÓGICO <span class="icon icon--pdf u-margin-left-xs"></span></a>
+                </div>   
             </div>
         </div>
     </section>
@@ -564,8 +567,11 @@
 
     <div class="modal">
         <div class="modal__wrapper">
-            <span class="modal-close icon icon--close u-p-top-right-s">&nbsp;</span>
+            <div class="modal__header">
+                <span class="modal-close icon icon--close u-p-top-right-s">&nbsp;</span>
+            </div>
             <div class="modal__content"></div>
+            <div class="modal__footer"></div>
         </div>
     </div>
 
@@ -573,6 +579,6 @@
     <script defer async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4sciudjQxavw9NnmO7iHR-HFJ3QK1cIw">
     </script>
-    <script src="assets/scripts/App-68e7b35138.js"></script>
+    <script src="assets/scripts/App-28b41f5644.js"></script>
 </body>
 </html>
