--- a/dev/data/educacao/ceb3.html
+++ b/dev/data/educacao/ceb3.html
@@ -1,10 +1,11 @@
 <div class="educacao__projecto-pedagogico">
-    <p class="educacao__pp-header">PRÉ-ESCOLAR</p>
-    <p class="educacao__pp-titulo">(3 aos 5 anos)</p>
+    <p class="educacao__pp-header">3º CEB</p>
+    <p class="educacao__pp-titulo">(12 aos 15 anos)</p>
 </div>
 
 <div class="educacao__actividades">
-    <div class="educacao__actividades-card">
+    <p class="educacao__pp-header">-= EM DESENVOLVIMENTO =-</p>
+    <!--<div class="educacao__actividades-card">
         <div class="educacao__actividades-image-placeholder">
             <img src="assets/images/campfire.jpg" class="educacao__actividades-image" alt="Fogueira">
         </div>
@@ -20,9 +21,9 @@
             <img src="assets/images/ritual.jpg" class="educacao__actividades-image" alt="Fogueira">
         </div>
         <div class="educacao__actividades-content">
-            <p class="educacao__actividades-title">Ritual de Iniciação</p>
-            <p class="educacao__actividades-description">Consiste na realização de pinturas faciais e penteados com adornos pré-históricos. Procuramos assim fomentar a criatividade através da identificação de rituais de iniciação em tribos actuais, procurando a ligação com as tribos ancestrais.</p>
-            <p class="educacao__actividades-duration"><span class="p-medium">Duração:</span> 30 min.</p>
+            <p class="educacao__actividades-title">Histórias à Lareira</p>
+            <p class="educacao__actividades-description">Através da leitura de uma história junto a uma Anta em tamanho real, procuramos recriar os momentos que os nossos antepassados passavam à lareira, descrevendo algumas das suas actividades do quotidiano como as caçadas, a pesca, etc…</p>
+            <p class="educacao__actividades-duration"><span class="p-medium">Duração:</span> 45 min.</p>
         </div>
     </div>
 
@@ -31,13 +32,12 @@
             <img src="assets/images/rupestres.jpg" class="educacao__actividades-image" alt="Fogueira">
         </div>
         <div class="educacao__actividades-content">
-            <p class="educacao__actividades-title">Pinturas Rupestres</p>
-            <p class="educacao__actividades-description">No ambiente de uma gruta, com corantes alimentares e pigmentos, aprendemos a produzir tintas e a utilizá-las num cenário de luz reduzida.…</p>
-            <p class="educacao__actividades-duration"><span class="p-medium">Duração:</span> 30 min.</p>
+            <p class="educacao__actividades-title">Histórias à Lareira</p>
+            <p class="educacao__actividades-description">Através da leitura de uma história junto a uma Anta em tamanho real, procuramos recriar os momentos que os nossos antepassados passavam à lareira, descrevendo algumas das suas actividades do quotidiano como as caçadas, a pesca, etc…</p>
+            <p class="educacao__actividades-duration"><span class="p-medium">Duração:</span> 45 min.</p>
         </div>
-    </div>
+    </div>-->
 </div>
-
 <div class="btn-box">
     <a href="#" class="btn btn-primary educacao__actividades-back">VOLTAR</a>
 </div>
