Inicio da introdução de media queries

--- a/dev/index.html
+++ b/dev/index.html
@@ -104,7 +104,7 @@
             <img src="assets/images/espacoInternet.jpg" class="valencias__image" alt="Espaço Internet">
             <div class="valencias__content">
                 <img src="assets/images/icons/desktop.svg" class="valencias__icon" alt="Icon do Espaço Internet">
-                <p class="valencias__title">Espaço Museológico</p>
+                <p class="valencias__title">Espaço Internet</p>
                 <p class="valencias__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
         </div>
@@ -282,19 +282,21 @@
     <section class="horario" id="horario">
         <div class="wrapper">
             <div class="horario__content">
-                <div class="horario__item u-margin-left-s">
-                    <img src="assets/images/icons/sun.svg" class="horario__icon" alt="Horário de Verão">
-                    <div class="horario_description u-margin-left-s">
-                        <p class="horario__tipo">HORÁRIO DE VERÃO</p>
-                        <p class="horario__funcionamento">10h00 às 19h00</p>
+                <div class="horario__abertura-info">
+                    <div class="horario__item">
+                        <img src="assets/images/icons/sun.svg" class="horario__icon" alt="Horário de Verão">
+                        <div class="horario_description u-margin-left-s">
+                            <p class="horario__tipo">HORÁRIO DE VERÃO</p>
+                            <p class="horario__funcionamento">10h00 às 19h00</p>
+                        </div>
                     </div>
-                </div>
 
-                <div class="horario__item u-margin-left-s">
-                    <img src="assets/images/icons/rain.svg" class="horario__icon"  alt="Horário de Inverno">
-                    <div class="horario_description u-margin-left-s">
-                        <p class="horario__tipo">HORÁRIO DE INVERNO</p>
-                        <p class="horario__funcionamento">10h00 às 17h00</p>
+                    <div class="horario__item">
+                        <img src="assets/images/icons/rain.svg" class="horario__icon"  alt="Horário de Inverno">
+                        <div class="horario_description u-margin-left-s">
+                            <p class="horario__tipo">HORÁRIO DE INVERNO</p>
+                            <p class="horario__funcionamento">10h00 às 17h00</p>
+                        </div>
                     </div>
                 </div>
 
