continuação da implementação da responsividade

--- a/dev/index.html
+++ b/dev/index.html
@@ -49,6 +49,9 @@
             <img src="assets/images/logo.svg" class="logo" alt="Logotipo Museu Interactivo do Megalitismo">
         </div>
 
+        <div class="btn-box header__btn-box">
+            <a href="" class="btn btn-secondary btn-secondary--grey u-margin-left-xs">VER FILME PROMOCIONAL DO CONCELHO <span class="icon icon--video-camera--grey u-margin-left-s"></span></a>
+        </div>
         <div class="scroll-icon"></div>
     </header>
 
@@ -285,7 +288,7 @@
                 <div class="horario__abertura-info">
                     <div class="horario__item">
                         <img src="assets/images/icons/sun.svg" class="horario__icon" alt="Horário de Verão">
-                        <div class="horario_description u-margin-left-s">
+                        <div class="horario_description u-margin-left-m">
                             <p class="horario__tipo">HORÁRIO DE VERÃO</p>
                             <p class="horario__funcionamento">10h00 às 19h00</p>
                         </div>
@@ -293,7 +296,7 @@
 
                     <div class="horario__item">
                         <img src="assets/images/icons/rain.svg" class="horario__icon"  alt="Horário de Inverno">
-                        <div class="horario_description u-margin-left-s">
+                        <div class="horario_description u-margin-left-m">
                             <p class="horario__tipo">HORÁRIO DE INVERNO</p>
                             <p class="horario__funcionamento">10h00 às 17h00</p>
                         </div>
