--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Museu Interactivo do Megalitismo</title>
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/styles-f7ebbf589e.css"/>
+    <link rel="stylesheet" href="assets/styles/styles-669c5922fd.css"/>
     <script src="assets/scripts/Vendor-025e9571d0.js"></script>
 </head>
 <body>
@@ -45,6 +45,9 @@
             <img src="assets/images/logo.svg" class="logo" alt="Logotipo Museu Interactivo do Megalitismo">
         </div>
 
+        <div class="btn-box header__btn-box">
+            <a href="" class="btn btn-secondary btn-secondary--grey u-margin-left-xs">VER FILME PROMOCIONAL DO CONCELHO <span class="icon icon--video-camera--grey u-margin-left-s"></span></a>
+        </div>
         <div class="scroll-icon"></div>
     </header>
 
@@ -100,7 +103,7 @@
             <img src="assets/images/espacoInternet.jpg" class="valencias__image" alt="Espaço Internet">
             <div class="valencias__content">
                 <img src="assets/images/icons/desktop.svg" class="valencias__icon" alt="Icon do Espaço Internet">
-                <p class="valencias__title">Espaço Museológico</p>
+                <p class="valencias__title">Espaço Internet</p>
                 <p class="valencias__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
         </div>
@@ -278,19 +281,21 @@
     <section class="horario" id="horario">
         <div class="wrapper">
             <div class="horario__content">
-                <div class="horario__item u-margin-left-s">
-                    <img src="assets/images/icons/sun.svg" class="horario__icon" alt="Horário de Verão">
-                    <div class="horario_description u-margin-left-s">
-                        <p class="horario__tipo">HORÁRIO DE VERÃO</p>
-                        <p class="horario__funcionamento">10h00 às 19h00</p>
+                <div class="horario__abertura-info">
+                    <div class="horario__item">
+                        <img src="assets/images/icons/sun.svg" class="horario__icon" alt="Horário de Verão">
+                        <div class="horario_description u-margin-left-m">
+                            <p class="horario__tipo">HORÁRIO DE VERÃO</p>
+                            <p class="horario__funcionamento">10h00 às 19h00</p>
+                        </div>
                     </div>
-                </div>
 
-                <div class="horario__item u-margin-left-s">
-                    <img src="assets/images/icons/rain.svg" class="horario__icon"  alt="Horário de Inverno">
-                    <div class="horario_description u-margin-left-s">
-                        <p class="horario__tipo">HORÁRIO DE INVERNO</p>
-                        <p class="horario__funcionamento">10h00 às 17h00</p>
+                    <div class="horario__item">
+                        <img src="assets/images/icons/rain.svg" class="horario__icon"  alt="Horário de Inverno">
+                        <div class="horario_description u-margin-left-m">
+                            <p class="horario__tipo">HORÁRIO DE INVERNO</p>
+                            <p class="horario__funcionamento">10h00 às 17h00</p>
+                        </div>
                     </div>
                 </div>
 
@@ -579,6 +584,6 @@
     <script defer async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4sciudjQxavw9NnmO7iHR-HFJ3QK1cIw">
     </script>
-    <script src="assets/scripts/App-5883515b00.js"></script>
+    <script src="assets/scripts/App-1301e5004b.js"></script>
 </body>
 </html>
